[package]
name = "matrix-poll-bot"
version = "0.1.0"
authors = ["Brandon Mittman <BrandonMittman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
matrix_bot_api = "0.5"
serde_yaml = "0.8"
serde = "1.0"
